--- a/example/i18n/en_US.json
+++ b/example/i18n/en_US.json
@@ -8,6 +8,8 @@
   "codebox_editor_edit": "edit on github",
   "codebox_editor_play": "play（cmd+s）",
   "codebox_editor_export": "export",
+  "codebox_open": "open",
+  "codebox_close": "close",
   "home_out_of_the_box": "Out of box",
   "home_box_desc": "Rich demo, out of the box, support demo debugging, export and use",
   "home_manage_canvas": "Strong manager",
